name:                ghcjs-three
version:             0.1.0.0
synopsis:            A Three.js wrapper for GHCJS
description:         Please see README.md
homepage:            http://github.com/manyoo/ghcjs-three#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Wong
maintainer:          ericsyw@gmail.com
copyright:           2015 Eric Wong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GHCJS.Three.Monad
                     , GHCJS.Three.Vector
                     , GHCJS.Three.Object3D
                     , GHCJS.Three.Camera
                     , GHCJS.Three.Color
                     , GHCJS.Three.Disposable
                     , GHCJS.Three.HasXYZ
                     , GHCJS.Three.Euler
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

test-suite ghcjs-three-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-three
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manyoo/ghcjs-three
