name:                ghcjs-three
version:             0.1.0.0
synopsis:            A Three.js wrapper for GHCJS
description:         Please see README.md
homepage:            http://github.com/manyoo/ghcjs-three#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Wong
maintainer:          ericsyw@gmail.com
copyright:           2015 Eric Wong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GHCJS.Three.Monad
                     , GHCJS.Three.Matrix
                     , GHCJS.Three.Vector
                     , GHCJS.Three.Face3
                     , GHCJS.Three.Box3
                     , GHCJS.Three.Sphere
                     , GHCJS.Three.Object3D
                     , GHCJS.Three.Camera
                     , GHCJS.Three.Projection
                     , GHCJS.Three.Color
                     , GHCJS.Three.Disposable
                     , GHCJS.Three.HasXYZ
                     , GHCJS.Three.CanCopy
                     , GHCJS.Three.Euler
                     , GHCJS.Three.Geometry
                     , GHCJS.Three.GLNode
                     , GHCJS.Three.Light
                     , GHCJS.Three.Material
                     , GHCJS.Three.Visible
                     , GHCJS.Three.Mesh
                     , GHCJS.Three.Line
                     , GHCJS.Three.Raycaster
                     , GHCJS.Three.Scene
                     , GHCJS.Three.WebGLRenderer
                     , GHCJS.Three.Texture
                     , GHCJS.Three.Path
                     , GHCJS.Three.Shape
                     , GHCJS.Three.ShapeGeometry
                     , GHCJS.Three.CylinderGeometry
                     , GHCJS.Three.BufferGeometry
                     , GHCJS.Three.CameraHelper
                     , GHCJS.Three.MTLLoader
                     , GHCJS.Three.OBJLoader
                     , GHCJS.Three
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
                     , transformers
                     , AC-Vector
                     , data-default
  default-language:    Haskell2010
  ghcjs-options:     -O2

executable ghcjs-three-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ghcjs-three
                     , ghcjs-dom
  default-language:    Haskell2010
  ghcjs-options:      -O2 -DGHCJS_BROWSER

test-suite ghcjs-three-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-three
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manyoo/ghcjs-three
